[package]
name = "thing-lists"
version = "0.0.1"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Website for lists of things."
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
csv = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.7"
tempfile = "3.0.3"
warp = "0.1.9"
display-as = { version = "0.4.3", features = ["warp"] }
simple-error = "0.1.9"
rand = "0.7.0"
bytes = "0.4.11"
clapme = "0.1.13"
memorable-wordlist = "0.1.5"
lets-encrypt-warp = { git = "https://github.com/droundy/lets-encrypt-warp" }
latex_snippet = "0.1.9"
tar = "0.4.26"

percent-encoding = "1.0.1"
