[package]
name = "thing-lists"
version = "0.0.1"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Website for lists of things."
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
csv = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
tempfile = "3.0.3"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"

display-as = { version = "0.6.2", features = ["usewarp"] }
simple-error = "0.2.2"
rand = "0.7.0"
bytes = "0.5.6"
clapme = "0.1.13"
memorable-wordlist = "0.1.5"
lets-encrypt-warp = "0.2.1"
tar = "0.4.26"
chrono = "0.4"

percent-encoding = "2.1.0"
